implemented parsing table